# lister

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  lister.py  main_test.py  noxfile.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: github-actions-test.yaml
