[tool.poetry]
name = "lister"
version = "1.2.0"
description = "Lister. A tool for EC2 listing, filtering & detail fetching."
authors = ["Adrián Sanz"]
readme = "README.md"
homepage = "https://github.com/adsanz/lister"
keywords = ["aws", "ec2", "list", "filter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: WTFPL License",
    "Operating System :: Unix",
    "Operating System :: MacOS ",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
lister = "lister:main"


[tool.poetry.dependencies]
python = "3.10.*"
rich = "12.6.0"
pytest = "^7.1.3"
boto3-stubs = {extras = ["essential"], version = "^1.24.96"}
pre-commit = "^2.20.0"
black = "^22.10.0"
botocore = "^1.29.32"
mypy-boto3-ec2 = "^1.26.28"
boto3 = "^1.26.32"
faker = "18.10.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adsanz/lister/issues"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
mypy = "^1.5"
coverage = {extras = ["toml"], version = "^6.5.0"}
nox = "^2022.8.7"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 70

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
